--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.qmd
@@ -54,9 +54,9 @@ author:
   - name: 'Samantha Schiano'
     affiliations:
       - name: 'ECS Federal in support of NMFS OST'
-        address: '2750 Prosperity Ave #600'
-        city: 'Fairfax, VA'
-        state: 'VA'
+        address: 'East-West Hwy'
+        city: 'Silver Spring, MD'
+        state: 'MD'
         postal-code: '22031'
   - name: 'Fabio Prior Caltabellotta'
     affiliations:
@@ -221,7 +221,7 @@ R0 <- output |>
 
 Please cite this publication as: 
 
-Johnston, M. A., Rosemond, R. C., Perl, E., Whitman, A., Barros, M., Champagnat, J., Schamp, A., Schiano, S., and  Prior Caltabellotta, F. (2025) Status of Yelloweye rockfish off the U.S. West Coast in 2025. Pacific Fishery Management Council. [XX] p.
+Johnston, M. A., Rosemond, R. C., Perl, E., Whitman, A., Barros, M., Champagnat, J., Schamp, A., Schiano, S., and  Prior Caltabellotta, F. (2025) Status of Yelloweye rockfish off the U.S. West Coast in 2025. Pacific Fishery Management Council. \pageref*{LastPage}{} pp.
 
 {{< pagebreak >}} 
 
