--- a/report/support_files/in-header.tex
+++ b/report/support_files/in-header.tex
@@ -2,10 +2,11 @@
 \usepackage{graphicx}
 % and their extensions so you won't have to specify these with
  % every instance of \includegraphics
- \usepackage{pdfcomment}
+\usepackage{pdfcomment}
 \DeclareGraphicsExtensions{.pdf,.jpeg,.png}
 \usepackage{wallpaper} % for the background image on title page
 \usepackage{geometry}
+\usepackage{lastpage}
 % set font
 
 % added by Ross
